Apparition d'une scrollbar permanente pour éviter le bug du décalage du monsieur lorsque les contenus apparaissent ou s'en vont

--- a/design/pc/disposition.css
+++ b/design/pc/disposition.css
@@ -2,6 +2,7 @@ body{
 	background:url('./images/background.jpg') fixed;
 	background-size: 800px 600px;
 	background-repeat:no-repeat;
+	overflow:scroll;
 }
 
 #mec{
